--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@
       <h1>Why Did I Explore this Issue?</h1>
       <p></p>
     </div>
+    <div class="artist-statement">
+      <p></p>
+    </div>
 
   </body>
 </html>
