--- a/con.html
+++ b/con.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Arguments Against Paying Student-Athletes</title>
+    <title>Quotes Against Paying Student-Athletes</title>
     <link rel="stylesheet" href="facts.css">
     <link rel="stylesheet" href="https://use.typekit.net/csn4igg.css">
   </head>
@@ -11,8 +11,12 @@
       <h4><a href="index.html">Return to Home Page</a></h4>
       <h1>Common Arguments <em>Against</em> Paying Student-Athletes</h1>
     </div>
-    <h5>"I don't think we should ever compensate players...They can keep their meal money ...   Everybody says, 'the coach makes this and the players[0].' The player is 17 years old. I've been working my whole life. There's a lot of 17-year-old kids that don't make money."</h5>
-    <p><em>Jim Boeheim</em>, Syracuse Men's Basketball Head Coach in October of 2018</p>
+    <div class="quotes">
 
+      <div class="individual-quote">
+        <h3>"I don't think we should ever compensate players. I think we can do as much as we can for players. The cost of attendance is good. They get more meals now so they can keep their meal money. I think those are all good things and I think more of those things should have been done. But I don't think you can compensate players straight out. What's the salary? How much? Do you pay football, men's basketball, women's basketball? We got a great lacrosse team, do we pay those guys? <br> The fallacy of the payment thing and they all say the same exact thing: 'It's a billion dollar business.' No, it's not. There might be income coming in, but it goes to all the other sports. It's not just coming into basketball and we're keeping it all.  We're bringing it in and it's paying for all the other sports. So at the end of the day, I know for a fact at Syracuse that it's zero. We have zero money left in the athletic department at the end of the year. Without paying anybody. <br> And everybody says, 'The coach makes this and the players (don't make anything).' The player is 17 years old. I've been working my whole life. There's a lot of 17-year-old kids that don't make money. Most of them. These 17-year-old kids are getting a $75,000 scholarship. And they compare that to a coach making all this money. What's the comparison there? I'm a grown man. I've been working for 50 years. That's just not a comparison. It makes no sense.  You might as well say that NBA players aren't making enough money because the owner's worth $2 billion. So the players should be making more money. It just makes no sense."</h3>
+        <h4><em>Jim Boeheim</em>, Syracuse Men's Basketball Head Coach</h4>
+      </div>
+    </div>
   </body>
 </html>
