--- a/pro.html
+++ b/pro.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Arguments For Paying Student-Athletes</title>
+    <title>Quotes Supporting Paying Student-Athletes</title>
     <link rel="stylesheet" href="facts.css">
     <link rel="stylesheet" href="https://use.typekit.net/csn4igg.css">
   </head>
@@ -12,11 +12,21 @@
       <h1>Common Arguments <em>For</em> Paying Student-Athletes</h1>
     </div>
 
-    <h5>"The only other time when labor does not get paid but yet someone else gets profits and the labor is black and the profit is white, is in slavery."</h5>
-    <p><em>Kylia Carter</em>, mother of former Duke Men's Basketball player, Wendell Carter Jr. in May of 2018</p>
-    <ul>
-      <li></li>
-    </ul>
+    <div class="quotes">
 
+      <div class="individual-quote">
+        <h3>"The only other time when labor does not get paid but yet someone else gets profits and the labor is black and the profit is white, is in slavery."</h3>
+        <h4>– <em>Kylia Carter</em>, mother of former Duke Men's Basketball player, Wendell Carter Jr.</p>
+      </div>
+
+      <div class="individual-quote">
+        <h3>"The NCAA makes so much money off of their kids, and they put ridiculous – absolutely ridiculous – restrictions on everything they can do.” </h3>
+        <h4>- <em>Aaron Rodgers</em>, current Green Bay Packers quarterback, former University of California, Berkeley quarterback</h4>
+      </div>
+
+      <div class="individual-quote">
+        <h3></h3>
+      </div>
+    </div>
   </body>
 </html>
