--- a/ncaa-finances.html
+++ b/ncaa-finances.html
@@ -19,13 +19,13 @@
         <h3>Revenue</h3>
         <h5>Year ended 8/31/17</h5>
       </div>
-      <h2>-</h2>
+      <h3>-</h3>
       <div class="equation">
         <h2>956M</h2>
         <h3>Expenses</h3>
         <h5>Year ended 8/31/17</h5>
       </div>
-      <h2>=</h2>
+      <h3>=</h3>
       <div class="equation">
         <h2>105M</h2>
         <h3>Profit</h3>
@@ -41,45 +41,118 @@
           <h5>championship ticket sales</h5>
           <div class="equation-modal championship-tickets-reveal">
             <p>The NCAA sponsors 90 NCAA championships and claims only 5 of these make a profit. The 5 profitable championships are all D1, men's sports including: Men's Basketball, Men's Ice Hockey, Men's Lacrosse, Wrestling, and Baseball.</p>
-            <p>The D1 College Football Playoffs and all of the bowl games are run independently of the NCAA, so   the NCAA does not fund nor receive revenue from these games.</p>
+            <p>The D1 College Football Playoffs and all of the bowl games are run independently of the NCAA, so the NCAA does not fund nor receive revenue from these games.</p>
           </div>
         </div>
+        <h1>n/a</h1>
         <h5>other revenues from a variety of sources</h5>
       </div>
+
+      <div class="equation-parts"></div>
+
       <div class="equation-parts">
         <div class="equation1 sport-sponsorship">
           <h1>217M</h1>
           <h5>sport sponsorship and scholarship funds</h5>
           <div class="equation-modal sport-sponsorship-reveal">
-            <p>Money is distributed to Division I schools to help fund NCAA sports and provide scholarships for college athletes.</p>
+            <p>Distributed to Division I schools to help fund NCAA sports and provide scholarships for college athletes.</p>
           </div>
         </div>
-        <h1>161M</h1>
-        <h5>distributed to D1 conferences to for march madness performance</h5>
-        <h1>97M</h1>
-        <h5>D1 championships including athlete travel, food, and lodging</h5>
-        <h1>82M</h1>
-        <h5>distributed to D1 athletes for "essential needs" during college</h5>
-        <h1>74M</h1>
-        <h5>other association-wide expenses</h5>
-        <h1>72M</h1>
-        <h5>student-athlete services</h5>
-        <h1>50M</h1>
-        <h5>D1 equal conference fund</h5>
-        <h1>47M</h1>
-        <h5>distributed to D1 schools for academic programs and services</h5>
-        <h1>42M</h1>
-        <h5>funds D2 championships, grants, and other initiatives</h5>
-        <h1>40M</h1>
-        <h5>covers costs related to NCAA governance and convention</h5>
-        <h1>40M</h1>
-        <h5>NCAA general and administrative expenses</h5>
-        <h1>28M</h1>
-        <h5>funds D3 championships, grants, and other inititatives</h5>
-        <h1>10M</h1>
-        <h5>D1 conference grants for programming to enhance sports</h5>
-        <h1>3M</h1>
-        <h5>educational programs to help prepare student-athletes for life</h5>
+        <div class="equation1 march-madness">
+          <h1>165M</h1>
+          <h5>D1 basketball performance fund</h5>
+          <div class="equation-modal march-madness-reveal">
+            <p>Distributed to Division I conferences and independent schools based on their performance in the men’s basketball tournament over a six-year rolling period. The money is used to fund NCAA sports and provide scholarships for college athletes.</p>
+          </div>
+        </div>
+        <div class="equation1 travel">
+          <h1>103M</h1>
+          <h5>D1 championships</h5>
+          <div class="equation-modal travel-reveal">
+            <p>Provides college athletes the opportunity to compete for a championship and includes support for team travel, food and lodging.</p>
+          </div>
+        </div>
+        <div class="equation1 association">
+          <h1>88M</h1>
+          <h5>other association-wide expenses</h5>
+          <div class="equation-modal association-reveal">
+            <p>Includes support for Association-wide legal services, communications and business insurance.</p>
+          </div>
+        </div>
+        <div class="equation1 needs">
+          <h1>85M</h1>
+          <h5>student assistance fund/h5>
+          <div class="equation-modal needs-reveal">
+            <p>Distributed to Division I student-athletes for essential needs that arise during their time in college.</p>
+          </div>
+        </div>
+        <div class="equation1 services">
+          <h1>74M</h1>
+          <h5>student-athlete services and championships support</h5>
+          <div class="equation-modal services-reveal">
+            <p>Includes funding for catastrophic injury insurance, drug testing, student-athlete leadership programs, postgraduate scholarships and additional Association-wide championships support.</p>
+          </div>
+        </div>
+        <div class="equation1 conference">
+          <h1>52M</h1>
+          <h5>D1 equal conference fund</h5>
+          <div class="equation-modal conference-reveal">
+            <p>Distributed equally among Division I basketball-playing conferences that meet athletic and academic standards to play in the men's basketball tournament. The money is used to fund NCAA sports and provide scholarships for college athletes.</p>
+          </div>
+        </div>
+        <div class="equation1 academics">
+          <h1>48M</h1>
+          <h5>academic enhancement fund</h5>
+          <div class="equation-modal academics-reveal">
+            <p>Distributed to Division I schools to assist with academic programs and services.</p>
+          </div>
+        </div>
+        <div class="equation1 administrative">
+          <h1>43M</h1>
+          <h5>general and administrative expenses</h5>
+          <div class="equation-modal administrative-reveal">
+            <p>Funds the day-to-day operations of the NCAA national office, including administrative and financial services, information technology and facilities management.</p>
+          </div>
+        </div>
+        <div class="equation1 d2">
+          <h1>42M</h1>
+          <h5>D2 allocation</h5>
+          <div class="equation-modal d2-reveal">
+            <p>Funds championships, grants and other initiatives for Division II college athletes.</p>
+          </div>
+        </div>
+        <div class="equation1 membership">
+          <h1>41M</h1>
+          <h5>membership support systems</h5>
+          <div class="equation-modal membership-reveal">
+            <p>Covers costs related to NCAA governance committees and the annual NCAA Convention.</p>
+          </div>
+        </div>
+        <div class="equation1 d3">
+          <h1>32M</h1>
+          <h5>D3 allocation</h5>
+          <div class="equation-modal d3-reveal">
+            <p>Funds championships, grants and other initiatives for Division III college athletes.</p>
+          </div>
+        </div>
+        <div class="equation1 grants">
+          <h1>10M</h1>
+          <h5>D1 conference grants for programming to enhance sports</h5>
+          <div class="equation-modal grants-reveal">
+            <p>Distributed to Division I conferences for programs that enhance officiating, compliance, minority opportunities and more.</p>
+          </div>
+        </div>
+        <div class="equation1 educational">
+          <h1>3M</h1>
+          <h5>educational programs</h5>
+          <div class="equation-modal educational-reveal">
+            <p>Supports varous educational services for members to help prepare student-athletes for life, including the Women Coaches Academy, the Emerging Leaders Seminars and the Pathway Program.</p>
+          </div>
+        </div>
+
+      </div>
+      <div class="equation-parts">
+
       </div>
       <div class="equation-parts">
 
